# funwavepy

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/funwavepy/: filestructure.txt
src/funwavepy/funwavetvd/: model.py  shipwake.py  vessel.py
src/funwavepy/funwavetvd/fortranfiles/: bc.F  breaker.F  etauv_solver.F  fluxes.F  global.pyf  init.F  io.F  main.F  mod_global.F  mod_meteo.F  mod_sediment.F  mod_vessel.F  nesting.F  samples.F  smain.pyf  sources.F  sponge.F  wavemaker.F
src/funwavepy/test/: shipwake_test.py
