[metadata]
name = funwavepy-sshi02
version = 0.0.1
author = Steven Shi
author_email = stevenlshi02@gmail.com
description = Wrapper for FUNWAVE-TVD with post-processing features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sshi02/funwavepy
project_urls =
    Bug Tracker = https://github.com/sshi02/funwavepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
